Prevent toolbar span text overflow on all pages

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -33,3 +33,7 @@ body {
 button mat-icon ~ span {
   margin-left: 4px;
 }
+
+mat-toolbar > span {
+  overflow: hidden;
+}
